--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "tabletopstats",
   "version": "1.0.0",
   "description": "",
-  "main": "vue.js",
+  "private": true,
+  "main": "index.js",
   "dependencies": {
+    "ansi-regex": "^2.1.1",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
+    "jshint": "^2.10.2",
+    "lodash": "^4.17.11",
     "popper.js": "^1.14.7",
+    "safe-buffer": "^5.1.2",
     "sass": "^1.17.3",
     "standard": "^12.0.1",
+    "strip-ansi": "^3.0.1",
     "vue": "^2.6.9",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
+    "wrappy": "^1.0.2"
   },
   "devDependencies": {},
   "scripts": {
