--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "tabletopstats",
-  "version": "1.0.0",
-  "description": "",
-  "private": true,
-  "main": "index.js",
-  "dependencies": {
-    "ansi-regex": "^2.1.1",
-    "bootstrap": "^4.3.1",
-    "css-loader": "^2.1.1",
-    "file-loader": "^3.0.1",
-    "jquery": "^3.3.1",
-    "jshint": "^2.10.2",
-    "lodash": "^4.17.11",
-    "node-sass": "^4.11.0",
-    "popper.js": "^1.14.7",
-    "safe-buffer": "^5.1.2",
-    "sass": "^1.17.3",
-    "sass-loader": "^7.1.0",
-    "standard": "^12.0.1",
-    "strip-ansi": "^3.0.1",
-    "style-loader": "^0.23.1",
-    "vue": "^2.6.9",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
-    "wrappy": "^1.0.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "mocha",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rosem1696/TabletopStats.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rosem1696/TabletopStats/issues"
-  },
-  "homepage": "https://github.com/rosem1696/TabletopStats#readme"
+    "name": "tabletopstats",
+    "version": "1.0.0",
+    "description": "",
+    "private": true,
+    "main": "index.js",
+    "dependencies": {
+        "ansi-regex": "^2.1.1",
+        "bootstrap": "^4.3.1",
+        "css-loader": "^2.1.1",
+        "file-loader": "^3.0.1",
+        "jquery": "^3.3.1",
+        "jshint": "^2.10.2",
+        "lodash": "^4.17.11",
+        "node-sass": "^4.11.0",
+        "popper.js": "^1.14.7",
+        "safe-buffer": "^5.1.2",
+        "sass": "^1.17.3",
+        "sass-loader": "^7.1.0",
+        "standard": "^12.0.1",
+        "strip-ansi": "^3.0.1",
+        "style-loader": "^0.23.1",
+        "vue": "^2.6.9",
+        "webpack": "^4.29.6",
+        "webpack-cli": "^3.3.0",
+        "webpack-dev-server": "^3.2.1",
+        "wrappy": "^1.0.2"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "test": "mocha",
+        "build": "webpack",
+        "start": "webpack-dev-server --open"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/rosem1696/TabletopStats.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/rosem1696/TabletopStats/issues"
+    },
+    "homepage": "https://github.com/rosem1696/TabletopStats#readme"
 }
