--- a/package.json
+++ b/package.json
@@ -26,7 +26,15 @@
         "webpack-dev-server": "^3.2.1",
         "wrappy": "^1.0.2"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "eslint": "^5.15.3",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-import": "^2.16.0",
+        "eslint-plugin-node": "^8.0.1",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-standard": "^4.0.0",
+        "eslint-plugin-vue": "^5.2.2"
+    },
     "scripts": {
         "test": "mocha",
         "build": "webpack",
