--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,9 @@
         "vue"
     ],
     "rules": {
+        "quotes": ["error", "double"],
+        "indent": ["error", 4],
+        "space-before-function-paren": ["error", "never"],
+        "semi": ["error", "always"]
     }
 }
