--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "main": "index.js",
     "dependencies": {
+        "@vue/cli": "^3.5.3",
         "ansi-regex": "^2.1.1",
         "bootstrap": "^4.3.1",
         "css-loader": "^2.1.1",
@@ -20,7 +21,7 @@
         "standard": "^12.0.1",
         "strip-ansi": "^3.0.1",
         "style-loader": "^0.23.1",
-        "vue": "^2.6.9",
+        "vue": "^2.6.10",
         "webpack": "^4.29.6",
         "webpack-cli": "^3.3.0",
         "webpack-dev-server": "^3.2.1",
