--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "bootstrap": "^4.3.1",
         "css-loader": "^2.1.1",
         "file-loader": "^3.0.1",
+        "graphql": "^14.2.0",
+        "html-webpack-plugin": "^3.2.0",
         "jquery": "^3.3.1",
         "jshint": "^2.10.2",
         "lodash": "^4.17.11",
@@ -21,6 +23,7 @@
         "standard": "^12.0.1",
         "strip-ansi": "^3.0.1",
         "style-loader": "^0.23.1",
+        "typescript": "^3.3.4000",
         "vue": "^2.6.10",
         "webpack": "^4.29.6",
         "webpack-cli": "^3.3.0",
