--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "dependencies": {
         "@vue/cli": "^3.5.3",
         "ansi-regex": "^2.1.1",
+        "autoprefixer": "^9.5.0",
         "bootstrap": "^4.3.1",
         "css-loader": "^2.1.1",
         "file-loader": "^3.0.1",
-        "graphql": "^14.2.0",
+        "graphql": "^14.1.1",
         "html-webpack-plugin": "^3.2.0",
         "jquery": "^3.3.1",
         "jshint": "^2.10.2",
         "lodash": "^4.17.11",
         "node-sass": "^4.11.0",
-        "popper.js": "^1.14.7",
+        "popper.js": "^1.15.0",
+        "postcss-loader": "^3.0.0",
+        "precss": "^4.0.0",
         "safe-buffer": "^5.1.2",
         "sass": "^1.17.3",
         "sass-loader": "^7.1.0",
